<resources>
    <string name="app_name">Data measure</string>
    <string name="bar_chart_widget">Bar chart</string>
    <string name="button">Grant permissions</string>
    <string name="permissions_not_granted">Data measure needs \"Usage access\" permissions to show your data usage. Please permit usage access:</string>
    <string name="permissions_granted">You can now use your launcher to add a widget to your homescreen.</string>
    <string name="close_config">Close</string>
    <string name="app_widget_description">Bar chart to show used data</string>
    <string name="zero_bytes">0 B</string>
    <string name="configure_widgets">Configure widgets</string>
    <string name="last_updated">last_updated</string>
    <string-array name="data_plan_sizes">
        <item>MB</item>
        <item>GB</item>
    </string-array>
    <string name="show_updated_at">Show last update</string>
    <string name="show_updated_at_summary">Show when the widget was last updated.</string>
    <string name="full_width">Full width</string>
    <string name="background_color">Background color</string>
    <string name="text_color">Text color</string>
    <string name="configure_widget">Configure widget</string>
    <string name="setup_text">Setup</string>
    <string name="setup_done_text">Setup complete!</string>
    <string name="basic_settings">Basic settings</string>
    <string name="design_settings">Design</string>
    <string name="advanced_settings">Advanced</string>
    <string name="monthly_data">Monthly data</string>
    <string name="data_unit">Use MB or GB</string>
    <string name="font_size">Font size</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="widget_preview">Widget preview</string>
    <string name="show_percentage">Show percentages</string>
    <string name="show_percentage_summary">Display percentage value instead of absolute number.</string>
    <string name="data_usage_percentage">%1$s %%</string>
    <string name="reload_data_usage">Reloading data usage...</string>
    <string name="allow_wallpaper_preview">Allow wallpaper preview</string>
</resources>