<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:key="test_basic_settings"
        android:title="Basic settings">
        <ListPreference
            android:defaultValue="GB"
            android:entries="@array/data_plan_sizes"
            android:entryValues="@array/data_plan_sizes"
            android:icon="@drawable/ic_baseline_list_alt_24"
            android:key="test_data_plan_unit"
            android:summary="Selected: %s"
            android:title="Set data plan unit" />

        <EditTextPreference
            android:icon="@drawable/ic_baseline_123_24"
            android:key="test_data_plan"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:summary="%s"
            android:title="Monthly data plan" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="test_design"
        android:title="Design">
        <SeekBarPreference
            android:defaultValue="3"
            android:icon="@drawable/ic_baseline_format_size_24"
            android:max="8"
            android:min="0"
            android:title="Font size"
            app:showSeekBarValue="true"/>

        <com.skydoves.colorpickerpreference.ColorPickerPreference
            android:icon="@drawable/ic_baseline_color_lens_24"
            android:key="test_text_color"
            android:summary="changes toolbar color"
            android:title="@string/text_color"
            app:default_color="@color/widgetDefaultTextColor"
            app:preference_attachAlphaSlideBar="true"
            app:preference_attachBrightnessSlideBar="true"
            app:preference_colorBox_radius="26dp"
            app:preference_dialog_negative="cancel"
            app:preference_dialog_positive="confirm"
            app:preference_dialog_title="@string/text_color"
            app:preference_palette="@drawable/palette"
            app:preference_selector="@drawable/wheel" />

        <com.skydoves.colorpickerpreference.ColorPickerPreference
            android:icon="@drawable/ic_baseline_color_lens_24"
            android:key="test_background_color"
            android:summary="changes toolbar color"
            android:title="@string/background_color"
            app:default_color="@color/widgetDefaultBackgroundColor"
            app:preference_attachAlphaSlideBar="true"
            app:preference_attachBrightnessSlideBar="true"
            app:preference_colorBox_radius="26dp"
            app:preference_dialog_negative="cancel"
            app:preference_dialog_positive="confirm"
            app:preference_dialog_title="@string/background_color"
            app:preference_palette="@drawable/palette"
            app:preference_selector="@drawable/wheel" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="test_advanced"
        android:title="Advanced"
        app:initialExpandedChildrenCount="0">

        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:icon="@drawable/ic_baseline_refresh_24"
            android:key="test_show_reload_button"
            android:summary="Will add a button that you can use to manually reload the widget."
            android:title="@string/show_reload_button" />

        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:icon="@drawable/ic_baseline_access_time_24"
            android:key="test_show_updated_at"
            android:summary="Show when the widget was last updated."
            android:title="@string/show_updated_at" />
    </PreferenceCategory>
</PreferenceScreen>